# neko-core

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOAL.md  LICENSE  README.md  RESEARCH-ux.md  SECURITY.md  _cm.txt  bunfig.toml  install.ps1  install.sh  package.json  pyproject.toml  trace-scroll.ndjson  tsconfig.build.json  tsconfig.json
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
_codex-tasks/: CONSULT-perf-strategy.md
assets/: mascot-art.txt
browser-extension/: PRIVACY.md  PUBLISHING.md  README.md  STORE-LISTING.md  control-indicator.js  manifest.json  popup.css  popup.html  popup.js  service-worker.js  sidepanel.html  sidepanel.js
docs/: ARCHITECTURE.md  DEVELOPER-GUIDE.md  EXTENDING.md  HARNESS-ARCHITECTURE.md  PORTING.md  VISION.md
evals/: __init__.py
reference/python/: pyproject.toml
reference/python/neko_core/: __init__.py  doctor.py  registry.py  tools.py
reference/python/tests/: test_agent.py  test_registry.py  test_tools.py
scripts/: antigravity-contract-lab.ts  bench-glob.ts  bench-resume.ts  bench-scroll-conpty.ts  bench-search.ts  bench-tty.ts  bench-ui.ts  build.ts  e2e-conpty-ghost.ts  gen-logo.ts  generate-browser-icons.ps1  harbor-eval.ts  input-probe.ts  inspect-ui.ts  make-icon.ts  package-browser-extension.ts  perf-idle-churn.ts  perf-lag.ts  perf-latency.ts  perf-map.ts  perf-react-cost.ts  perf-scroll-profile.ts  perf-scroll-trace.ts  perf-under-load.ts  probe-computer-input.ts  review-diff.ts  self-improve.ts  selftest.sh  stresstest.sh  wren-audit.ts
src/: agent.ts  config.ts  context.ts  cost.ts  doctor.ts  mcp.ts  permissions.ts  project.ts  providers.ts  registry.ts  skills.ts  tool-runtime.ts  tools.ts
test/: abort.test.ts  ace-value-eval.ts  agent.test.ts  altscreen.test.ts  anthropic.test.ts  approval-box.test.tsx  architecture.test.ts  atomic.test.ts  bench.test.ts  browser-bridge.test.ts  browser-visual-qa.test.ts  browser-voice.test.ts  (+89 more)
(+235 files in other folders)
