[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neko-core-reference"
version = "0.1.0"
description = "Reference (spec) implementation of Neko Core in Python. The product is the TypeScript build at the repo root; this is kept as the design reference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "The Wiii Lab" }]
keywords = ["llm", "agent", "cli", "local-first", "offline", "coding-agent"]

# Light footprint: the default OpenAI-compatible provider needs requests; the heavy
# local-GGUF deps stay in the [local] extra.
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
local = ["llama-cpp-python>=0.2.0"]
openai = ["openai>=1.0.0"]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
neko = "neko_core.cli:main"
neko-core = "neko_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
